hphp/hack/test/sound_dynamic/typing/pessimise_builtins/keyset.bad.php.exp
File "keyset.bad.php", line 5, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
  File "keyset.bad.php", line 3, characters 42-52:
  This container is an object of type keyset<int>
  File "keyset.bad.php", line 3, characters 28-33:
  A dynamic value or a float cannot be used as a key for an object of type keyset<int>
File "keyset.bad.php", line 6, characters 3-13:
Keyset values must be arraykeys (Typing[4435])
  File "keyset.bad.php", line 3, characters 42-52:
  This container is an object of type keyset<int>
  File "keyset.bad.php", line 3, characters 28-33:
  A dynamic value or a float is not an arraykey
File "keyset.bad.php", line 7, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
  File "keyset.bad.php", line 3, characters 42-52:
  This container is an object of type keyset<~num>
  File "keyset.bad.php", line 3, characters 28-33:
  A dynamic value or a float cannot be used as a key for an object of type keyset<~num>
